fix: wrong font / link color in teachers component

--- a/src/app/pages/Teacher/Teachers.scss
+++ b/src/app/pages/Teacher/Teachers.scss
@@ -37,6 +37,10 @@
       border-bottom: 1px solid rgba(100%,100%,100%,0.1);
     }
 
+    a {
+      color: white;
+    }
+
     @include to-xs {
       font-size: 1.1em;
     }
